--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7495618193422190"
      crossorigin="anonymous"></script>
-</head>
+<!--adsense-->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7495618193422190"
+     crossorigin="anonymous"></script>
+	</head>
 <body>
   <!-- partial:index.partial.html -->
   
