--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             
             <h1>Welcome to Animated Backgrounds!</h1> 
 
-<p>Are you tired of boring, static backgrounds on your website or presentation? Our animated backgrounds will bring your content to life and make it stand out from the crowd. With a wide range of styles and colors to choose from, you'll find the perfect background to match your brand and message.<br><br>
+<p> <a href="https://indianblogging.me">indianblogging.me</a> Are you tired of boring, static backgrounds on your website or presentation? Our animated backgrounds will bring your content to life and make it stand out from the crowd. With a wide range of styles and colors to choose from, you'll find the perfect background to match your brand and message.<br><br>
 
 Add a touch of creativity and visual interest to your website or blog. With Animated Backgrounds, you can easily set a variety of elegant and engaging background animations with just a few clicks.<br></p> 
 
