--- a/Submit/index.html
+++ b/Submit/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
 </div>
-<script src="sender.js"></script>
+<script src="./sender.js"></script>
 <!-- partial -->
   <script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
