--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 <!--adsense-->
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7495618193422190"
      crossorigin="anonymous"></script>
+
+	<link rel="apple-touch-icon" sizes="180x180" href="https://animatedbackgrounds.me/apple-touch-icon.png"/>
+
+<link rel="icon" type="image/png" sizes="32x32" href="https://animatedbackgrounds.me/favicon-32x32.png"/>
+
+<link rel="icon" type="image/png" sizes="16x16" href="https://animatedbackgrounds.me/favicon-16x16.png"/>
+
+<link rel="manifest" href="https://raw.githubusercontent.com/Prakhar826/Animatedbackgrounds/main/site.webmanifest"/>
 	</head>
 <body>
   <!-- partial:index.partial.html -->
