--- a/Worst/index.html
+++ b/Worst/index.html
@@ -82,7 +82,7 @@ c0-11.797,9.536-21.333,21.333-21.333s21.333,9.536,21.333,21.333V256z"/>
 
 <h2 class="font-weight-bold text-dark">Climbing Mountains and Breaking Barriers</h2> 
 
-<p class="my-2" style="line-height: 2;">As they ventured into the great outdoors, Lily, Emma, and Ava found themselves facing towering mountains and daunting challenges. United by friendship and fueled by determination, they conquered not only the peaks but also the barriers within themselves. Each summit marked a triumph, symbolizing the <a href="https://pleasurepoint.store/collections/clitoral-suction-toys-for-her">strength of their unbreakable bond</a>.</p>
+<p class="my-2" style="line-height: 2;">As they ventured into the great outdoors, Lily, Emma, and Ava found themselves facing towering mountains and daunting challenges. United by friendship and fueled by determination, they conquered not only the peaks but also the barriers within themselves. Each summit marked a triumph, symbolizing the <a href="https://pleasurepoint.store/collections/clitoral-suction-toys-for-her">pleasurepoint</a>.</p>
 <br><br> 
 
 <h2 class="font-weight-bold text-dark">Seaside Serenity: Beach Days and Sunset Hues</h2> 
