--- a/404.html
+++ b/404.html
@@ -31,6 +31,22 @@
   <div class ="texty">
 		  <img src="https://raw.githubusercontent.com/Prakhar826/anime-video/main/animation_500_l9pntfl4.gif" alt="">
     <div class="page_404">
+
+
+<script type="module" src="https://securepubads.shareusads.com/scripts/tag/js/sgpt.js" ></script>
+
+<div id="shareusadx-4793248735981148-0660092882">
+ <script>
+     window._shareustag = window._shareustag || {cmd:[]};
+    _shareustag.cmd.push(function() {
+      var slot1 = _shareustag.defineSlot('/shareusadx/4793248735981148/0660092882/First banner ad', ["Responsive"],'shareusadx-4793248735981148-0660092882');
+    });
+  </script>
+</div>
+
+
+
+	    
    <h1>Look like you're lost</h1> <p>The Page You Are Looking For Is Not Available !!!</p>
   <br>
    <button class="modal__button" id="open-modal">
