--- a/index.html
+++ b/index.html
@@ -232,6 +232,20 @@ Don't miss out on this opportunity to elevate your website and make it truly unf
 
 <h3>Get in touch with us instantly</h3><br> 
 
+
+<script type="module" src="https://securepubads.shareusads.com/scripts/tag/js/sgpt.js" ></script>
+
+<div id="shareusadx-4793248735981148-0660092882">
+ <script>
+     window._shareustag = window._shareustag || {cmd:[]};
+    _shareustag.cmd.push(function() {
+      var slot1 = _shareustag.defineSlot('/shareusadx/4793248735981148/0660092882/First banner ad', ["Responsive"],'shareusadx-4793248735981148-0660092882');
+    });
+  </script>
+</div>
+
+
+		  
 <p>If you have any questions or concerns regarding AnimatedBackgrounds.me, or need help getting started, please don't hesitate to reach out to us via email at <a href="mailto:owner@animatedbackgrounds.me" style="color:#ff3153;"> Owner@animatedbackgrounds.me</a><br> 
 
 We are dedicated to providing the best possible support to our users. Thank you for considering us as a resource. </p>
