--- a/index.html
+++ b/index.html
@@ -142,11 +142,12 @@
                   <span class="job-number">76</span>
                 </div>
 <br>
+	  <br>
 	  
 
 <script type="module" src="https://securepubads.shareusads.com/scripts/tag/js/sgpt.js" ></script>
 
-<div id="shareusadx-4793248735981148-0660092882">
+<div class="alert" id="shareusadx-4793248735981148-0660092882">
  <script>
      window._shareustag = window._shareustag || {cmd:[]};
     _shareustag.cmd.push(function() {
