--- a/index.html
+++ b/index.html
@@ -144,17 +144,17 @@
 <br>
 	  <br>
 	  
-
+<div class="alert">
 <script type="module" src="https://securepubads.shareusads.com/scripts/tag/js/sgpt.js" ></script>
 
-<div class="alert" id="shareusadx-4793248735981148-0660092882">
+<div  id="shareusadx-4793248735981148-0660092882">
  <script>
      window._shareustag = window._shareustag || {cmd:[]};
     _shareustag.cmd.push(function() {
       var slot1 = _shareustag.defineSlot('/shareusadx/4793248735981148/0660092882/First banner ad', ["Responsive"],'shareusadx-4793248735981148-0660092882');
     });
   </script>
-</div>
+</div></div>
 
 
 	  
