--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 <br>
 	  <br>
 	  
-<div class="alert">
-<script type="module" src="https://securepubads.shareusads.com/scripts/tag/js/sgpt.js" ></script>
+
+<script class="alert" type="module" src="https://securepubads.shareusads.com/scripts/tag/js/sgpt.js" ></script>
 
 <div  id="shareusadx-4793248735981148-0660092882">
  <script>
@@ -154,7 +154,7 @@
       var slot1 = _shareustag.defineSlot('/shareusadx/4793248735981148/0660092882/First banner ad', ["Responsive"],'shareusadx-4793248735981148-0660092882');
     });
   </script>
-</div></div>
+</div>
 
 
 	  
