--- a/index.html
+++ b/index.html
@@ -262,5 +262,14 @@ We are dedicated to providing the best possible support to our users. Thank you 
         <script src="./script.js"></script>
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
+<script type="module" src="https://securepubads.shareusads.com/scripts/tag/js/sgpt.js" ></script>
+ <script>
+     window._shareustag = window._shareustag || {cmd:[]};
+    _shareustag.cmd.push(function() {
+      var slot1 = _shareustag.defineAutoAdSlot('/shareusadx/4793248735981148/4548344986/Auto Ads');
+    });
+  </script>
+
+
       </body>
 </html>
