--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@ We are dedicated to providing the best possible support to our users. Thank you 
 			
         </article>
         <!-- partial -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
+        <script src="./script.js"></script>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 
       </body>
