--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ class Subscribe extends React.Component {
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <script src= " https://code.jquery.com/jquery-3.2.1.slim.min.js "></script>
+  <script src= " https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js "></script>
+	<script src= " https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js "></script>
  
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7495618193422190"
      crossorigin="anonymous"></script>
