--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ class Subscribe extends React.Component {
   }
 }
 
-// ReactDOM.render(
-//   <Subscribe />,
-//   document.getElementById('subscribe')
-// )
+ ReactDOM.render(
+   <Subscribe />,
+   document.getElementById('subscribe')
+ )
 </script>  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> 
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css'> 
