--- a/Rabba.html
+++ b/Rabba.html
@@ -267,6 +267,7 @@ We are dedicated to providing the best possible support to our users. Thank you 
         <!-- partial -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
         <script src="./script.js"></script>
+	      <script src="./newsletter.js"></script>
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <script> 
   window.dataLayer = window.dataLayer || [];
