--- a/Rabba.html
+++ b/Rabba.html
@@ -71,7 +71,7 @@
     <h3>Subscribe to our newsletter</h3>
     <p>Weekly animation updates delivered straight to your inbox</p>
     <form action="#">
-      <input type="email" placeholder="Email Address" required>
+      <input type="email" placeholder="Email Address" required/>
       <button>Subscribe</button>
     </form>
     <div class="Loading">
