--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                <h1>About</h1>
 <p> Hi, my name is Prakhar Tripathi and I am a self-taught front-end developer, UI designer, and tech enthusiast from India. I have a strong curiosity and a desire to constantly learn new things. I began my programming journey in July 2019, starting from zero knowledge in coding and programming. However, I have always had a passion for creating my own designs and tools using HTML and CSS. <br><br>
 
-In addition to developing websites, I also enjoy blogging and sharing my knowledge with others. I believe in using my skills and knowledge to help others grow and succeed. You can find more of my content on my blog, <a href="https://indianblogging.me" style="color:#ff3153;">indianblogging.me</a>. Thank you for taking the time to learn more about me.    </p> 
+In addition to developing websites, I also enjoy blogging and sharing my knowledge with others. I believe in using my skills and knowledge to help others grow and succeed. You can find more of my content on my blog, <a href="https://indianblogging.tech" style="color:#ff3153;">indianblogging.tech</a>. Thank you for taking the time to learn more about me.    </p> 
 
 <h3>Contact information</h3> 
 <br>
