--- a/Rabba.html
+++ b/Rabba.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>Animated Backgrounds</title>
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="keywords" content="Animated backgrounds, Motion backgrounds, Background animation, Moving backgrounds"> 
+<meta name="mobile-web-app-capable" content="yes"> 
+	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYRH5XJN84"></script>
 
+<!--link to css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> 
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css'> 
   <link rel="stylesheet" href="./style.css">
@@ -16,20 +17,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <script src= " https://code.jquery.com/jquery-3.2.1.slim.min.js "></script>
- 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7495618193422190"
-     crossorigin="anonymous"></script>
 
-  <meta name="p:domain_verify" content="85bba5f5d14833ea390d327e074c2181"/>
-
-
+<!-- favicon -->
 
 	<link rel="apple-touch-icon" sizes="180x180" href="https://animatedbackgrounds.me/apple-touch-icon.png"/>
-
 <link rel="icon" type="image/png" sizes="32x32" href="https://animatedbackgrounds.me/favicon-32x32.png"/>
-
 <link rel="icon" type="image/png" sizes="16x16" href="https://animatedbackgrounds.me/favicon-16x16.png"/>
-
 <link rel="manifest" href="https://raw.githubusercontent.com/Prakhar826/Animatedbackgrounds/main/site.webmanifest"/>
 	
 
