--- a/Rabba.html
+++ b/Rabba.html
@@ -64,8 +64,8 @@
     <h3>Subscribe to our newsletter</h3>
     <p>Weekly animation updates delivered straight to your inbox</p>
     
-     <form action="#">
-  <input type="text" placeholder="Email Address"/>
+     <form action="" onsubmit=" return sender()">
+  <input type="text" id="email" name="email" placeholder="Email Address"/>
        <span class="error-message" style="display: none;">Please enter a valid email address.</span>
   <button>Subscribe</button>
 </form>
