--- a/Rabba.html
+++ b/Rabba.html
@@ -67,7 +67,7 @@
      <form action="" onsubmit=" return sender()">
   <input type="text" id="email" name="email" placeholder="Email Address"/>
        <span class="error-message" style="display: none;">Please enter a valid email address.</span>
-  <button>Subscribe</button>
+  <input type="submit" value="Send" id="btn">
 </form>
 
     <div class="Loading">
