--- a/Rabba.html
+++ b/Rabba.html
@@ -58,7 +58,7 @@
 
         <div class="main-container">
           <div class="search-type">
-
+<!-- Newsletter-->
             <div class="Container">
   <div class="Subscribe">
     <h3>Subscribe to our newsletter</h3>
@@ -67,7 +67,7 @@
      <form action="" onsubmit=" return sender()">
   <input type="text" id="email" name="email" placeholder="Email Address"/>
        <span class="error-message" style="display: none;">Please enter a valid email address.</span>
-  <input type="submit" value="Subscribe" id="btn">
+  <button type="submit" id="btn">Subscribe</button>
 </form>
 
     <div class="Loading">
