--- a/Rabba.html
+++ b/Rabba.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width">
   <title>Animated Backgrounds</title>
 <meta name="mobile-web-app-capable" content="yes"> 
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QYRH5XJN84"></script>
