--- a/Rabba.html
+++ b/Rabba.html
@@ -67,11 +67,12 @@
     <h3>Subscribe to our newsletter</h3>
     <p>Weekly animation updates delivered straight to your inbox</p>
     
-     <form action="" onsubmit=" return sender()">
-  <input type="text" id="email" name="email" placeholder="Email Address"/>
-       <span class="error-message" style="display: none;">Please enter a valid email address.</span>
+     <form action="" onsubmit="return sender()" class="Subscribe">
+  <input type="text" id="email" name="email" placeholder="Email Address" />
+  <span class="error-message" style="display: none;">Please enter a valid email address.</span>
   <button type="submit" id="btn">Subscribe</button>
 </form>
+
 
     <div class="Loading">
       <div class="LoadingDot"></div>
