--- a/Rabba.html
+++ b/Rabba.html
@@ -7,6 +7,7 @@
 <meta name="mobile-web-app-capable" content="yes"> 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
