--- a/Rabba.html
+++ b/Rabba.html
@@ -69,7 +69,7 @@
     <p>Weekly animation updates delivered straight to your inbox</p>
     
      <form action="" onsubmit="return sender()" class="Subscribe">
-  <input type="text" id="email" name="email" placeholder="Email Address" />
+  <input type="text" name="email" placeholder="Email Address" />
   <span class="error-message" style="display: none;">Please enter a valid email address.</span>
   <button type="submit" id="btn">Subscribe</button>
 </form>
