--- a/Rabba.html
+++ b/Rabba.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head> 
@@ -68,11 +69,25 @@
     <h3>Subscribe to our newsletter</h3>
     <p>Weekly animation updates delivered straight to your inbox</p>
     
-     <form action="" onsubmit="return sender()" class="Subscribe">
-  <input type="text" name="email" placeholder="Email Address" />
-  <span class="error-message" style="display: none;">Please enter a valid email address.</span>
-  <button type="submit" id="btn">Subscribe</button>
-</form>
+     <form action="" onsubmit=" return sender()">
+        <ul>
+            <li>
+                <label for="name"><span>Name <span class="required-star">*</span></span></label>
+                <input type="text" id="name" name="name">
+            </li>
+            <li>
+                <label for="mail"><span>Email <span class="required-star">*</span></span></label>
+                <input type="email" id="email" name="email">
+            </li>
+            <li>
+                <label for="msg"><span>Message</span></label>
+                <textarea name="message" id="message" cols="50" rows="4" required></textarea>
+            </li>
+            <li>
+                <input type="submit" value="Send" id="btn">
+            </li>
+        </ul>
+    </form>
 
 
     <div class="Loading">
