--- a/Rabba.html
+++ b/Rabba.html
@@ -72,16 +72,8 @@
      <form action="" onsubmit=" return sender()">
         <ul>
             <li>
-                <label for="name"><span>Name <span class="required-star">*</span></span></label>
-                <input type="text" id="name" name="name">
-            </li>
-            <li>
                 <label for="mail"><span>Email <span class="required-star">*</span></span></label>
-                <input type="email" id="email" name="email">
-            </li>
-            <li>
-                <label for="msg"><span>Message</span></label>
-                <textarea name="message" id="message" cols="50" rows="4" required></textarea>
+                <input type="email" id="email" name="email" required>
             </li>
             <li>
                 <input type="submit" value="Send" id="btn">
