--- a/Rabba.html
+++ b/Rabba.html
@@ -66,7 +66,7 @@
     <h3>Subscribe to our newsletter</h3>
     <p>Weekly animation updates delivered straight to your inbox</p>
     
-     <form action="" onsubmit=" return sender()">
+     <form action="" id="formId" onsubmit=" return sender()">
         <ul>
             <li>
                 <label for="mail"><span>Email <span class="required-star">*</span></span></label>
