--- a/Rabba.html
+++ b/Rabba.html
@@ -67,15 +67,8 @@
     <p>Weekly animation updates delivered straight to your inbox</p>
     
      <form action="" id="formId" onsubmit=" return sender()">
-        <ul>
-            <li>
-                <label for="mail"><span>Email <span class="required-star">*</span></span></label>
-                <input type="email" id="email" name="email" required>
-            </li>
-            <li>
+                <input type="email" id="email" name="email" placeholder="Email Address" required>
                 <input type="submit" value="Send" id="btn">
-            </li>
-        </ul>
     </form>
 
 
