--- a/Rabba.html
+++ b/Rabba.html
@@ -68,7 +68,7 @@
     
      <form action="" id="formId" onsubmit=" return sender()">
                 <input type="email" id="email" name="email" placeholder="Email Address" required>
-                <input type="submit" value="Send" id="btn">
+                <input type="submit" value="Send" id="button">
     </form>
 
 
