--- a/Rabba.html
+++ b/Rabba.html
@@ -66,10 +66,13 @@
     <h3>Subscribe to our newsletter</h3>
     <p>Weekly animation updates delivered straight to your inbox</p>
     
-     <form action="" id="formId" onsubmit=" return sender()">
-                <input type="email" id="email" name="email" placeholder="Email Address" required>
-                <input type="submit" value="Send" id="button">
-    </form>
+     <form action="" id="formId" onsubmit="return sender()">
+  <input type="email" id="email" name="email" placeholder="Email Address" required>
+  <button id="button">
+    <span>Send</span>
+  </button>
+</form>
+
 
  
   </div>
