--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css'>
   <link rel="stylesheet" href="./loader.css">
@@ -39,6 +39,20 @@
                 Go Home 
             </button>
     </div>
+
+	  
+<script type="module" src="https://securepubads.shareus.io/scripts/tag/js/gpt.js" ></script>
+
+<div id="shareus-admanager-0073887528-9DYJaJQJhS">
+ <script>
+     window._shareustag = window._shareustag || {cmd:[]};
+    _shareustag.cmd.push(function() {
+      var slot1 = _shareustag.defineSlot('/shareus-admanager/0073887528/9DYJaJQJhS/Animated', ["Responsive"],'shareus-admanager-0073887528-9DYJaJQJhS');
+    });
+  </script>
+</div>
+
+
  </div>
   </div>
 
